--- a/break.html
+++ b/break.html
@@ -29,7 +29,7 @@
 <body>
   <h1 class="text-5xl font-bold mb-6 float">☕ Take a Break 😌</h1>
   <p class="text-xl opacity-90 mb-8">Relax, breathe, and come back stronger!</p>
-  <a href="heartbreak.html" class="px-6 py-3 bg-white text-black font-semibold rounded-full hover:scale-105 transition">
+  <a href="index.html" class="px-6 py-3 bg-white text-black font-semibold rounded-full hover:scale-105 transition">
     Back to Work 💪
   </a>
 </body>
