--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <div class="relative group z-10">
     <div class="absolute inset-0 rounded-full animate-ping blur-3xl opacity-50" 
          style="background: radial-gradient(circle at center, var(--accent) 0%, transparent 70%);"></div>
-    <img id="profile-img" src="/assets/profile.jpg" alt="Profile"
+    <img id="profile-img" src="assets/profile.jpg" alt="Profile"
          class="w-56 h-56 md:w-64 md:h-64 rounded-full shadow-2xl border-4 border-[var(--accent)] object-cover transform group-hover:scale-105 transition duration-700 cursor-pointer">
   </div>
 
@@ -100,7 +100,7 @@
   </h2>
   <p class="text-lg md:text-xl mt-3 opacity-90 z-10">Automation & Embedded Engineer</p>
 
-  <a href="/assets/resume.pdf" download
+  <a href="assets/resume.pdf" download
      class="mt-6 px-8 py-3 rounded-full accent-bg text-white font-semibold shadow-lg hover:scale-105 transition duration-500 relative overflow-hidden z-10">
     Download Resume
     <span class="anime-popup absolute -top-6 left-1/2 transform -translate-x-1/2 text-xl opacity-0 transition-all duration-500">🎉</span>
