--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   profileImg.addEventListener('click', () => {
     clickCount++;
     if(clickCount === 4) {
-      window.location.href = 'tukde.html';
+      window.location.href = '/tukde.html';
     }
     // Reset after 2 seconds to avoid accidental clicks
     setTimeout(() => clickCount = 0, 2000);
